[gd_scene load_steps=52 format=2]

[ext_resource path="res://Grafik/Character/ddu_main_character_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Grafik/Character/Vandkande_animation_character_sheet.png" type="Texture" id=3]
[ext_resource path="res://Grafik/Pause_menu.png" type="Texture" id=4]
[ext_resource path="res://Grafik/Character/Pause_menu_hovedperson_dans.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=67]
radius = 56.0
height = 54.0

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 992, 200, 248 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 992, 200, 248 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 992, 200, 248 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 992, 200, 248 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 316, 192 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 316, 192 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 576, 316, 192 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 768, 316, 192 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 960, 316, 192 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1152, 316, 192 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1344, 316, 192 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1536, 316, 192 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1728, 316, 192 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1920, 316, 192 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2112, 316, 192 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2304, 316, 192 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2496, 316, 192 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2688, 316, 192 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2880, 316, 192 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3072, 316, 192 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3264, 316, 192 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 496, 200, 248 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 496, 200, 248 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 496, 200, 248 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 496, 200, 248 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 744, 200, 248 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 744, 200, 248 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 744, 200, 248 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 744, 200, 248 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 200, 248 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 200, 248 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 200, 248 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 200, 248 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 248, 200, 248 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 248, 200, 248 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 248, 200, 248 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 248, 200, 248 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "Vanding",
"speed": 14.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Walk_e",
"speed": 5.5
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Walk_n",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Walk_s",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Walk_w",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=43]
radius = 56.0
height = 64.0

[sub_resource type="RectangleShape2D" id=61]
extents = Vector2( 153, 44.5 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 400, 496 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 400, 496 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 400, 496 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 400, 496 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "Pauseskærm",
"speed": 6.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, -5 )
script = ExtResource( 2 )

[node name="Player2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource( 67 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="Player" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 43 )

[node name="Vand" type="Area2D" parent="."]

[node name="Vand" type="CollisionShape2D" parent="Vand"]
position = Vector2( 1, 25.5 )
shape = SubResource( 61 )
disabled = true

[node name="PauseMenu" type="Sprite" parent="."]
visible = false
position = Vector2( -7, 20.5 )
scale = Vector2( 2, 2.04222 )
z_index = 20
texture = ExtResource( 4 )

[node name="Spil videre" type="Button" parent="PauseMenu"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -342.0
margin_top = -43.0
margin_right = 350.0
margin_bottom = 42.0

[node name="Luk spil" type="Button" parent="PauseMenu"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -245.0
margin_top = 85.0
margin_right = 242.0
margin_bottom = 176.0

[node name="Dans" type="AnimatedSprite" parent="PauseMenu"]
position = Vector2( 3, -125 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 66 )
animation = "Pauseskærm"

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="pressed" from="PauseMenu/Spil videre" to="." method="_on_Spil_videre_pressed"]
[connection signal="pressed" from="PauseMenu/Luk spil" to="." method="_on_Luk_spil_pressed"]
